dream big added

--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
         <img src="showOff/my-bg.png" alt="" />
       </div>
     </section>
+    <section class="dream-big">
+      <div class="half-width">
+        <img src="showOff/my-bg2.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a Web Developer</h2>
+        <p>
+          I want to be a big web developer, its my first goal to my success. i
+          started it somedays ego. I will do it very nice after some month in
+          sha allah, it learned to not are easy. it learned is very much
+          difficult. then i will become a best web developer in sha allah
+        </p>
+        <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+      </div>
+    </section>
   </body>
 </html>
