--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">AK Zaman Shibly</span> World!</h1>
@@ -37,7 +37,7 @@
         <img src="showOff/my-bg.png" alt="" />
       </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
       <div class="half-width">
         <img src="showOff/my-bg2.png" alt="" />
       </div>
@@ -53,5 +53,34 @@
         <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
       </div>
     </section>
+    <section class="experience-area">
+      <h1>Experiences</h1>
+
+      <div class="flexible-container">
+        <div id="full-stack-developer" class="experience-item">
+          <h1>Full Stack Web Developer</h1>
+          <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
+          <p>
+            I want to be a big web developer, its my first goal to my success. i
+            started it somedays ego. I will do it very nice after some month in
+            sha allah, it learned to not are easy. it learned is very much
+            difficult. then i will become a best web developer in sha allah
+          </p>
+        </div>
+        <div id="baby-web-developer" class="experience-item">
+          <h1>Baby Web Developer</h1>
+          <h3 class="orange-color">2024-2025| High Pro Level Developer</h3>
+          <p>
+            I want to be a big web developer, its my first goal to my success. i
+            started it somedays ego. I will do it very nice after some month in
+            sha allah, it learned to not are easy. it learned is very much
+            difficult. then i will become a best web developer in sha allah
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
+  <footer>
+    <p>Ashikuzzaman is a programming hero learner</p>
+  </footer>
 </html>
